@@ -1,5 +1,13 @@
 2005-12-24  Ben Elliston  <bje@gnu.org>
 
+	* lib/remote.exp: Tidy.
+	* lib/targetdb.exp: Likewise.
+	* lib/target.exp (prune_warnings): Improve comments.
+	* lib/dejagnu.exp: Likewise.
+	* lib/utils.exp: Likewise.
+
+2005-12-24  Ben Elliston  <bje@gnu.org>
+
 	* NEWS: Update.
 
 2005-12-24  Ben Elliston  <bje@gnu.org>
